# seedstudio-gd32v

./: .travis.yml  Cargo.toml  README.md  memory.x  openocd.cfg  sipeed-jtag.cfg
examples/: blinky.rs  display.rs  ferris.raw  ferris.rs  hello_world.rs  touch.rs
src/: lcd.rs  led.rs  lib.rs  touch.rs
