[package]
name = "seedstudio-gd32v"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
repository = "https://github.com/riscv-rust/seedstudio-gd32v"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for the GD32 RISC-V Dev Board from SeeedStudio"
keywords = ["riscv", "gd32", "bsp"]
license = "ISC"
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.3.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
embedded-graphics = { version = "0.6.2", optional = true }

[dependencies.ili9341]
version = "0.3.0"
features = ["graphics"]
optional = true

[dev-dependencies]
riscv-rt = "0.6.1"
panic-halt = "0.2.0"

[features]
lcd = ["ili9341", "embedded-graphics"]

[[example]]
name = "display"
required-features = ["lcd"]

[[example]]
name = "ferris"
required-features = ["lcd"]

[package.metadata.docs.rs]
features = ['lcd']
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
